# pattern

./: .gitignore  Cargo.toml  README.md  log4rs.yml  settings.yml
palettes/: default.palette
src/: fractals.rs  main.rs  settings.rs
static/: help.html  histogram.html  index-scripts.js  index-styles.css  index.html
