[package]
name = "pattern"
version = "0.1.0"
edition = "2021"

[dependencies]
# Logging settings.
log = "0.4"
log4rs = "1.0"

# Global settings.
futures = "0.3"
futures-util = "0.3"
lazy_static = "1.4"
num-complex = "0.4"
sanitize-filename = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.34"
tokio = { version = "1.38.0", features = ["full"] }
toml = "0.8.19"
image = "0.24"

# UI settings.
actix-files = "0.6.5"
actix-multipart = "0.7.2"
actix-web = "4.4.0"
